# Sudoku

./: .gitignore  manage.py  requirements.txt
Solver_app/: apps.py  models.py  pysolver.py  tests.py  urls.py  views.py
Solver_app/migrations/: 0001_initial.py  0002_sudokuboard_fields.py  0003_alter_sudokuboard_fields.py  0004_alter_sudokuboard_fields.py  0005_alter_sudokuboard_fields.py  0006_alter_sudokuboard_fields.py
Solver_app/static/: board.css
Solver_app/templates/: base.html  home.html  solved.html  solver.html
Solver_cpp/: CMakeLists.txt  main.cpp  pywrap.cpp  sds.py  setup.py  sudoku_board.cpp  sudoku_board.h
Sudoku/: asgi.py  settings.py  urls.py  wsgi.py
functional_tests/: tests.py
sudoku_solver/: apps.py
virtualenv/: pyvenv.cfg
virtualenv/Scripts/: activate  activate.bat
